# nicp

./: .clang-format  .gitignore  CMakeLists.txt  package.xml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  cloud_viewer_gui_app.cpp  local_mapper_gui_app.cpp  map_refiner_gui_app.cpp  nicp_cloud_viewer_app.cpp  nicp_cloud_viewer_gui_app.cpp  nicp_local_mapper_gui_app.cpp  nicp_nn_aligner_gui_app.cpp  nicp_projective_aligner_gui_app.cpp  nicp_refiner_gui_app.cpp  nicp_spherical_aligner_gui_app.cpp  nicp_tracker_gui_app.cpp  nicp_trajectory_loader_gui_app.cpp  tracker_gui_app.cpp  trajectory_loader_gui_app.cpp
src/boss/: CMakeLists.txt  bidirectional_serializer.cpp  bidirectional_serializer.h  blob.cpp  blob.h  deserializer.cpp  deserializer.h  eigen_boss_plugin.h  eigen_boss_plugin.hpp  id_context.cpp  id_context.h  id_placeholder.cpp  id_placeholder.h  identifiable.cpp  identifiable.h  json_message_parser.cpp  json_message_parser.h  json_message_writer.cpp  json_message_writer.h  json_object_parser.cpp  json_object_parser.h  json_object_writer.cpp  json_object_writer.h  logger.cpp  logger.h  message.cpp  message.h  message_data.cpp  message_data.h  message_parser.cpp  message_parser.h  message_writer.cpp  message_writer.h  object_data.cpp  object_data.h  object_parser.cpp  object_parser.h  object_sequence.h  object_writer.cpp  object_writer.h  (+10 more)
src/core/: CMakeLists.txt  base_aligner.cpp  base_aligner.h  base_camera_info.cpp  base_camera_info.h  base_correspondence_finder.cpp  base_correspondence_finder.h  base_projector.cpp  base_projector.h  camera_info_manager.cpp  camera_info_manager.h  cloud.cpp  cloud.h  cylindrical_camera_info.h  depth_utils.cpp  depth_utils.h  multi_camera_info.cpp  multi_camera_info.h  multi_projector.cpp  multi_projector.h  nn_correspondence_finder.cpp  nn_correspondence_finder.h  pinhole_camera_info.cpp  pinhole_camera_info.h  pinhole_projector.cpp  pinhole_projector.h  projective_aligner.cpp  projective_correspondence_finder.cpp  projective_correspondence_finder.h  solver.cpp  solver.h  spherical_camera_info.cpp  spherical_camera_info.h  spherical_projector.cpp  spherical_projector.h  unscented.h
src/core_tests/: CMakeLists.txt  nicp_projective_aligner_test.cpp  nicp_spherical_aligner_test.cpp
src/examples/: CMakeLists.txt  nicp_3dscan2cloud_example.cpp  nicp_nn_aligner_example.cpp  nicp_projective_aligner_example.cpp  nicp_spherical_aligner_example.cpp  nicp_trajectory_loader_example.cpp  trajectory_loader_example.cpp
src/gl_helpers/: opengl_primitives.h  simple_viewer.cpp
src/global_optimization/: CMakeLists.txt  g2o_bridge.cpp  g2o_bridge.h
src/globals/: CMakeLists.txt  base_image_message.cpp  base_image_message.h  base_message.cpp  base_message.h  base_sensor_message.cpp  base_sensor_message.h  defs.h  message_factory.cpp  message_factory.h  message_reader.cpp  message_reader.h  message_seq_synchronizer.cpp  message_seq_synchronizer.h  message_writer.cpp  message_writer.h  opengl_primitives.cpp  opengl_primitives.h  pinhole_image_message.cpp  pinhole_image_message.h  sensor_message_sorter.cpp  sensor_message_sorter.h  simple_viewer.cpp  simple_viewer.h  spherical_image_message.cpp  spherical_image_message.h  static_transform_message.cpp  static_transform_message.h  static_transform_tree.cpp  static_transform_tree.h  system_utils.cpp  system_utils.h  types.h
src/local_mapper/: CMakeLists.txt  local_map_triggers.cpp  local_map_triggers.h  local_mapper.cpp  local_mapper.h
src/map/: CMakeLists.txt  binary_node_relation.cpp  binary_node_relation.h  image_map_node.cpp  image_map_node.h  local_map.cpp  local_map.h  map_node.cpp  map_node.h  map_node_list.cpp  map_node_list.h  multi_image_map_node.cpp  multi_image_map_node.h
src/map_core/: CMakeLists.txt  base_camera_info.cpp  base_camera_info.h  binary_node_relation.cpp  binary_node_relation.h  cloud.cpp  cloud.h  image_map_node.cpp  image_map_node.h  local_map.cpp  local_map.h  map_node.cpp  map_node.h  map_node_list.cpp  map_node_list.h  multi_camera_info.cpp  multi_camera_info.h  multi_image_map_node.cpp  multi_image_map_node.h  pinhole_camera_info.cpp  pinhole_camera_info.h  spherical_camera_info.cpp  spherical_camera_info.h
src/map_global_optimization/: CMakeLists.txt  g2o_bridge.cpp  g2o_bridge.h
src/map_ros/: CMakeLists.txt  cloud_publisher_trigger.cpp  cloud_publisher_trigger.h  local_map_listener.cpp  local_map_listener.h  local_mapper_ros.cpp  local_mapper_ros.h  map_msgs_ros.cpp  map_msgs_ros.h
src/map_tracker/: CMakeLists.txt  base_triggers.cpp  base_triggers.h  call_tracker_trigger.cpp  call_tracker_trigger.h  multi_tracker.cpp  multi_tracker.h  tracker.cpp  tracker.h
src/map_viewers/: CMakeLists.txt  aligner_viewer.cpp  aligner_viewer.h  cloud_viewer.cpp  cloud_viewer.h  local_mapper_viewer.cpp  local_mapper_viewer.h  tracker_viewer.cpp  tracker_viewer.h  trajectory_viewer.cpp  trajectory_viewer.h
src/map_viewers_ros/: CMakeLists.txt  global_map_viewer.cpp  global_map_viewer.h  local_map_viewer.cpp  local_map_viewer.h
src/nicp/: CMakeLists.txt  base_aligner.cpp  base_aligner.h  base_correspondence_finder.h  base_projector.cpp  base_projector.h  camera_info_manager.cpp  camera_info_manager.h  depth_utils.h  multi_projector.cpp  multi_projector.h  nn_aligner.cpp  nn_aligner.h  nn_correspondence_finder.cpp  nn_correspondence_finder.h  pinhole_projector.cpp  pinhole_projector.h  projective_aligner.cpp  projective_aligner.h  projective_correspondence_finder.cpp  projective_correspondence_finder.h  solver.cpp  solver.h  spherical_projector.cpp  spherical_projector.h  unscented.h
src/nicp_boss/: CMakeLists.txt  blob.h  deserializer.cpp  id_context.cpp  json_message_parser.h  log_reader.h  log_writer.h  message_writer.h  object_sequence.cpp  object_writer.h  serializer.h  trusted_loaders.h
src/nicp_gl_helpers/: CMakeLists.txt  draw_attributes.h  opengl_primitives.cpp  simple_viewer.h
src/nodes/: CMakeLists.txt  global_mapper_viewer_node.cpp  local_mapper_client_node_example.cpp  local_mapper_dumper_node.cpp  local_mapper_node.cpp  local_mapper_viewer_node.cpp  (+3 more)
(+28 files in other folders)
