add_subdirectory(boss)
add_subdirectory(globals)
add_subdirectory(core)
add_subdirectory(tracker)
add_subdirectory(map)
add_subdirectory(local_mapper)

add_subdirectory(examples)
add_subdirectory(viewers)
add_subdirectory(apps)

# add_subdirectory(ros_bridge)

# the one below requires g2o
add_subdirectory(global_optimization)
# add_subdirectory(calibration)
# add_subdirectory(playground)
# add_subdirectory(loop_closer)
