add_subdirectory(map_core)
add_subdirectory(nicp)
add_subdirectory(global_optimization)
add_subdirectory(map_tracker)
add_subdirectory(local_mapper)

add_subdirectory(examples)
add_subdirectory(viewers)
add_subdirectory(apps)

# add_subdirectory(ros_bridge)
# add_subdirectory(calibration)
# add_subdirectory(playground)
# add_subdirectory(loop_closer)
