add_subdirectory(map_core)
add_subdirectory(nicp)
add_subdirectory(map_global_optimization)
add_subdirectory(map_tracker)
add_subdirectory(local_mapper)
add_subdirectory(examples)
add_subdirectory(map_viewers)
add_subdirectory(apps)

add_subdirectory(map_ros)
add_subdirectory(map_viewers_ros)
# add_subdirectory(nodes)

# add_subdirectory(calibration)
# add_subdirectory(playground)
# add_subdirectory(loop_closer)
